# litty-llm

./: .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  ReadMe.md  deploy_litty.bat  deploy_litty.sh  lit-client.py
checkpoints/: .placeholder
checkpoints/configs/: 7B-HF4bit.json  7B-litllama.json  7B-safetensors.json  7B.json  ReadMe.md
data/: config.yaml
data/config/: models.yaml
data/docker/: .env_docker  Dockerfile  docker-compose-cpu.yml  docker-compose-nvidia.yml  entrypoint.sh  environment.yaml  lit-server.sh  lit-supervisor.sh  supervisord.conf
data/scripts/: start_llm_server.bat  start_llm_server.sh
docker/: Dockerfile  connect.sh  docker-compose-cpu.yml  docker-compose-nvidia.yml  entrypoint.sh  environment.yaml
lit-server/: common.py  lit-server.py  model.py
lit-server/amq/: HeartBeat.py  MQServer.py  ModelServer.py
lit-server/lit_llama/: __init__.py  model.py
scripts/: build.bat  build.sh  deploy.bat  deploy.sh  package.sh  run.bat  run.sh
scripts/docker/: start_docker.bat  start_docker.sh
src/: LLMManager.cpp  LLMManager.h  main.cpp
src/Client/: Client.cpp  Client.h  Commands.h  DockerCommandsInterface.cpp  DockerCommandsInterface.h  Heartbeat.cpp  Heartbeat.h
src/Config/: config.h  model_config.h  structs.h
src/Display/: ErrorHandler.h  QDisplay.h  QDisplay_Base.h
src/Display/Menus/TopBar/: QDisplay_ConfigureModel.h  QDisplay_ImportModel.h  QDisplay_LoadModel.h  QDisplay_TopBar.h
src/Helpers/: GLHelper.h  QLogger.h  States.h
